# simple-3D-renderer-rs

./: Cargo.toml
src/: lib.rs  main.rs  renderer.rs  rendering_engine.rs
src/renderer/: scene.rs
src/renderer/scene/: camera.rs  model_2d.rs  object_3d.rs
src/renderer/scene/camera/: display.rs
src/renderer/scene/model_2d/: pixel.rs  point.rs  triangle.rs
src/renderer/scene/model_3d/: mesh.rs  plane.rs  plane_direction.rs  point.rs  triangle.rs  vector.rs
src/renderer/scene/model_3d/plane/: coefficients.rs
src/renderer/scene/object_2d/: point.rs  triangle.rs
src/renderer/scene/object_3d/: mesh.rs  plane.rs  plane_direction.rs  point.rs  triangle.rs  vector.rs
src/renderer/scene/object_3d/plane/: coefficients.rs
src/rendering_engine/: engine.rs  scene.rs
src/rendering_engine/engine/: color_blender.rs  compositor.rs  depth_pixel.rs  model.rs  pixel.rs  projector.rs  rasterizer.rs  renderer.rs  z_buffered_triangle.rs  z_bufferizer.rs
src/rendering_engine/engine/model/: depth_pixel.rs  pixel.rs
src/rendering_engine/scene/: camera.rs  model_3d.rs
src/rendering_engine/scene/camera/: display.rs
src/rendering_engine/scene/model/: color.rs
src/rendering_engine/scene/model_2d/: point.rs  triangle.rs
src/rendering_engine/scene/model_3d/: face.rs  mesh.rs  plane.rs  point.rs  triangle.rs  vector.rs
