[package]
name = "simple-3D-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
sdl2 = "0.37.0"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.19.0"
js-sys = "0.3.69"
serde_json = "1.0.122"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4.22"

bresenham = "0.1.1"
line_drawing = "1.0.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]